--- a/res/layout/items.xml
+++ b/res/layout/items.xml
@@ -1,8 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please list items with batch numbers where possible"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        
+          <EditText
+              android:id="@+id/editText1"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:ems="10"
+              android:inputType="textMultiLine"
+              android:lines="10" >
+
+        <requestFocus />
+    </EditText>
+
+    </LinearLayout>
+
+  
+
+</ScrollView>
